--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -38,7 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/margin_1"
-                android:text="@string/nav_home"
+                android:text="@string/nav_notification"
                 android:textSize="@dimen/text_size_13" />
 
         </LinearLayout>
