--- a/app/src/main/res/menu/menu_merchant_navigation.xml
+++ b/app/src/main/res/menu/menu_merchant_navigation.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/nav_bottom_home"
         android:icon="@drawable/ic_home"
-        android:title="@string/nav_home" />
+        android:title="@string/nav_notification" />
 
     <item
         android:id="@+id/nav_bottom_profile"
