--- a/app/src/main/res/layout/room_item_layout.xml
+++ b/app/src/main/res/layout/room_item_layout.xml
@@ -21,7 +21,7 @@
             android:layout_marginLeft="@dimen/margin_3"
             android:layout_marginRight="@dimen/margin_3"
             android:scaleType="centerCrop"
-            android:src="@drawable/sylhet" />
+            android:src="@color/colorAccent" />
 
         <TextView
             android:id="@+id/female_friendly_layout"
