nav drawer added

--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -80,7 +80,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_booking" />
+                app:srcCompat="@drawable/ic_briefcase" />
 
             <TextView
                 android:id="@+id/booking_text"
