--- a/app/src/main/res/layout/login_fragment_layout.xml
+++ b/app/src/main/res/layout/login_fragment_layout.xml
@@ -25,7 +25,7 @@
                 android:layout_height="175dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/margin_30"
-                app:srcCompat="@drawable/ic_medicine_icon" />
+                app:srcCompat="@drawable/ic_login" />
 
         </LinearLayout>
 
