--- a/app/src/main/res/layout/activity_room_details.xml
+++ b/app/src/main/res/layout/activity_room_details.xml
@@ -62,7 +62,7 @@
                 android:paddingTop="@dimen/margin_16">
 
                 <ImageView
-                    android:id="@+id/map_image"
+                    android:id="@+id/map_layout"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:background="@color/colorPrimary"
@@ -74,7 +74,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/margin_16"
-                    android:layout_toRightOf="@id/map_image"
+                    android:layout_toRightOf="@id/map_layout"
                     android:maxLines="4"
                     android:text="" />
 
@@ -86,7 +86,7 @@
                     android:layout_below="@+id/room_details"
                     android:layout_marginLeft="@dimen/margin_16"
                     android:layout_marginTop="@dimen/margin_5"
-                    android:layout_toRightOf="@+id/map_image"
+                    android:layout_toRightOf="@+id/map_layout"
                     android:background="#ff1744"
                     android:paddingBottom="@dimen/margin_3"
                     android:paddingLeft="@dimen/margin_10"
