--- a/app/src/main/res/layout/activity_room_booking.xml
+++ b/app/src/main/res/layout/activity_room_booking.xml
@@ -5,13 +5,13 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/cancel_booking_1"
+        android:id="@+id/back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_16"
         android:layout_marginTop="@dimen/margin_16"
         android:padding="@dimen/margin_10"
-        app:srcCompat="@drawable/ic_cancel_black_24dp" />
+        app:srcCompat="@drawable/ic_back_icon" />
 
     <LinearLayout
         android:id="@+id/login_layout"
@@ -37,6 +37,7 @@
                 app:srcCompat="@drawable/ic_accept" />
 
             <TextView
+                android:id="@+id/congratulation_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -97,7 +98,7 @@
                     android:text="Do you want to cancel your order?" />
 
                 <TextView
-                    android:id="@+id/cancel_booking_2"
+                    android:id="@+id/cancel_booking"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/margin_5"
