--- a/app/src/main/res/layout/notification_dialog_layout.xml
+++ b/app/src/main/res/layout/notification_dialog_layout.xml
@@ -7,32 +7,41 @@
     card_view:cardCornerRadius="@dimen/margin_2"
     card_view:cardElevation="@dimen/margin_2">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/margin_10">
+        android:layout_marginLeft="@dimen/margin_16"
+        android:layout_marginRight="@dimen/margin_16"
+        android:layout_marginTop="@dimen/margin_16"
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/client_name"
+            android:id="@+id/confirmation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Client Name"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/text_size_16" />
+            android:text="Confirmation!"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/text_size_18" />
+
+        <TextView
+            android:id="@+id/message"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/margin_10"
+            android:text="" />
 
         <LinearLayout
-            android:id="@+id/transaction_date_layout"
+            android:id="@+id/booking_date_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/client_name"
             android:layout_marginTop="@dimen/margin_10"
             android:orientation="horizontal"
+            android:visibility="gone"
             android:weightSum="2">
 
             <TextView
-                android:id="@+id/transaction_date"
+                android:id="@+id/booking_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -40,7 +49,7 @@
                 android:textColor="@android:color/black" />
 
             <TextView
-                android:id="@+id/total_amount"
+                android:id="@+id/room_cost"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -50,33 +59,17 @@
                 android:textStyle="bold" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/accept"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/transaction_date_layout"
-            android:layout_marginTop="@dimen/margin_20"
-            android:orientation="horizontal">
+            android:layout_marginTop="@dimen/margin_10"
+            android:background="?selectableItemBackground"
+            android:gravity="center"
+            android:padding="@dimen/margin_10"
+            android:text="OK"
+            android:textColor="@color/green"
+            android:textSize="@dimen/margin_12" />
 
-            <TextView
-                android:id="@+id/accept"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="?selectableItemBackground"
-                android:padding="@dimen/margin_10"
-                android:text="ACCEPT"
-                android:textColor="@color/green"
-                android:textSize="@dimen/margin_12" />
-
-            <TextView
-                android:id="@+id/decline"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="?selectableItemBackground"
-                android:padding="@dimen/margin_10"
-                android:text="DECLINE"
-                android:textColor="@color/red"
-                android:textSize="@dimen/margin_12" />
-
-        </LinearLayout>
-    </RelativeLayout>
+    </LinearLayout>
 </android.support.v7.widget.CardView>
