--- a/app/src/main/res/layout/activity_room_list.xml
+++ b/app/src/main/res/layout/activity_room_list.xml
@@ -147,4 +147,14 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/no_data_found"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="No Data"
+        android:textColor="@color/red"
+        android:textSize="18sp"
+        android:visibility="gone" />
+
 </android.support.design.widget.CoordinatorLayout>
