--- a/app/src/main/res/layout/activity_room_list.xml
+++ b/app/src/main/res/layout/activity_room_list.xml
@@ -26,7 +26,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="?selectableItemBackground"
-                    android:padding="@dimen/margin_10"
+                    android:paddingBottom="@dimen/margin_10"
+                    android:paddingLeft="@dimen/margin_5"
+                    android:paddingRight="@dimen/margin_5"
+                    android:paddingTop="@dimen/margin_10"
                     app:srcCompat="@drawable/ic_back_icon" />
             </LinearLayout>
 
@@ -152,9 +155,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="No Data"
+        android:text="No rooms found!"
         android:textColor="@color/red"
         android:textSize="18sp"
         android:visibility="gone" />
+
+    <include layout="@layout/progress_layout"></include>
 
 </android.support.design.widget.CoordinatorLayout>
