--- a/app/src/main/res/layout/activity_room_booking.xml
+++ b/app/src/main/res/layout/activity_room_booking.xml
@@ -78,8 +78,8 @@
                 android:id="@+id/btn_make_call"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="42dp"
+                android:layout_above="@+id/cancel_booking_layout"
+                android:layout_marginBottom="@dimen/margin_10"
                 android:background="@drawable/button_selector"
                 android:text="Make Call"
                 android:textAllCaps="false"
@@ -88,10 +88,11 @@
                 android:visibility="visible" />
 
             <RelativeLayout
+                android:id="@+id/cancel_booking_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="@dimen/margin_10"
                 android:gravity="center_horizontal">
 
                 <TextView
