--- a/app/src/main/res/layout/room_item_layout.xml
+++ b/app/src/main/res/layout/room_item_layout.xml
@@ -1,106 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/margin_3"
-    android:foreground="?selectableItemBackground"
-    card_view:cardCornerRadius="@dimen/margin_2"
-    card_view:cardElevation="@dimen/margin_0"
-    card_view:cardUseCompatPadding="true">
+    android:layout_marginTop="10dp"
+    android:background="@android:color/white">
 
-    <RelativeLayout
+    <ImageView
+        android:layout_marginTop="2dp"
+        android:id="@+id/room_image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="210dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginEnd="3dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/dummy_image2" />
 
-        <ImageView
-            android:id="@+id/room_image"
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:layout_marginLeft="@dimen/margin_3"
-            android:layout_marginRight="@dimen/margin_3"
-            android:scaleType="centerCrop"
-            android:src="@color/colorAccent" />
-
-        <TextView
-            android:id="@+id/female_friendly_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/room_image"
-            android:layout_marginBottom="@dimen/margin_10"
-            android:layout_marginLeft="@dimen/margin_16"
-            android:background="#ff1744"
-            android:paddingBottom="@dimen/margin_3"
-            android:paddingLeft="@dimen/margin_10"
-            android:paddingRight="@dimen/margin_10"
-            android:text="Female Friendly"
-            android:textColor="@color/white"
-            android:visibility="gone" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/room_image"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/room_image"
-            android:layout_marginLeft="@dimen/margin_16"
-            android:layout_marginRight="@dimen/margin_16"
-            android:layout_marginTop="@dimen/margin_16"
             android:ellipsize="end"
             android:includeFontPadding="false"
             android:maxLines="1"
-            android:text="1 Seat Room"
-            android:textColor="#242529"
-            android:textSize="@dimen/text_size_18"
-            android:textStyle="bold" />
+            android:text="OYO 18832 Sateja Tourist Home Saver"
+            android:textColor="#242529" />
 
         <TextView
             android:id="@+id/address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/title"
-            android:layout_marginLeft="@dimen/margin_16"
-            android:layout_marginRight="@dimen/margin_16"
             android:layout_marginTop="@dimen/margin_2"
             android:ellipsize="end"
             android:gravity="bottom"
             android:maxLines="1"
-            android:text="address"
+            android:text="Gulshan, Dhaka"
             android:textSize="@dimen/text_size_12" />
 
-        <LinearLayout
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/address"
-            android:layout_marginBottom="@dimen/margin_16"
-            android:layout_marginLeft="@dimen/margin_16"
-            android:layout_marginRight="@dimen/margin_16"
-            android:layout_marginTop="@dimen/margin_10"
-            android:orientation="horizontal">
+            android:layout_below="@+id/address"
+            android:layout_marginTop="2dp"
+            android:text="$13 per night" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Price: "
-                android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/text_size_20" />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/room_cost"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textAllCaps="false"
-                android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/text_size_20" />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_like_white" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="/Person"
-                android:textAllCaps="false"
-                android:textSize="@dimen/text_size_20" />
-
-        </LinearLayout>
-    </RelativeLayout>
-</android.support.v7.widget.CardView>
+</RelativeLayout>
