--- a/app/src/main/res/layout/activity_room_search.xml
+++ b/app/src/main/res/layout/activity_room_search.xml
@@ -56,7 +56,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
-            android:background="@android:color/black" />
+            android:background="#E4E4E4" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -91,7 +91,7 @@
             <View
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:background="@android:color/black" />
+                android:background="#E4E4E4" />
 
             <LinearLayout
                 android:id="@+id/end_date_layout"
@@ -119,9 +119,10 @@
             <View
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:background="@android:color/black" />
+                android:background="#E4E4E4" />
 
             <LinearLayout
+                android:id="@+id/room_guest_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -129,12 +130,14 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_room_qty"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="1 Room"
                     android:textColor="@android:color/holo_red_dark" />
 
                 <TextView
+                    android:id="@+id/tv_adult_qty"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="1 Adult"
